src/main/java/com/example/login_jwt/global/error/exception/NotFoundGroupException.java
package com.example.login_jwt.global.error.exception;

public abstract class NotFoundGroupException extends RuntimeException{
    public NotFoundGroupException(String message) {
        super(message);
    }
}
